# CORE

./: CMakeLists.txt  CORE.c  CORE.h  README.md
Base/: Analog.c  Analog.h  CAN.c  CAN.h  CMakeLists.txt  Digital.c  Digital.h  I2C.c  I2C.h  Interrupts.c  Interrupts.h  Mempool.c  Mempool.h  SPI.c  SPI.h  Serial.c  Serial.h  Server.c  Server.h  Time.c  Time.h  Types.h
CORE/: algorithm.c  base.c  control.c  subsystem.c
CORE/algorithm/: a*.cpp  bezier.cpp  drivetrain.cpp  maps.c  prereqisites.c  trajectory.cpp
CORE/base/: interrupt.cpp  io.cpp  misc.cpp  prerequisites.c  serial.cpp  string.cpp  time.cpp
CORE/control/: PID.cpp  bezier.cpp  controllers.cpp  estimation.cpp  fault.cpp  point.cpp  prerequisites.c  safety.cpp  signal-condition.cpp  trajectory.cpp
CORE/subsystem/: motor.cpp  prerequisites.c
CORE/subsystem/motors/: dc.cpp  servo.cpp  stepper.cpp  v5.cpp
CORE/subsystem/sensors/: IMU.cpp  barometer.cpp  humidity.cpp  odometer.cpp  thermal.cpp  ultrasonic.cpp
Controller/: CMakeLists.txt  Geometry.h  KalmanFilter.c  KalmanFilter.h  Kinematics.c  Kinematics.h  PID.c  PID.h  StateMachine.c  StateMachine.h  Trajectory.c  Trajectory.h
Motor/: BLDC.c  BLDC.h  CMakeLists.txt  DC.c  DC.h  LinearActuator.c  LinearActuator.h  Motor.h  Servo.c  Servo.h  Stepper.c  Stepper.h
Navigation/: CMakeLists.txt  Mapping.c  Mapping.h  PathPlanning.c  PathPlanning.h  SLAM.c  SLAM.h
Sensor/: CMakeLists.txt  Color.c  Color.h  Distance.c  Distance.h  Encoder.c  Encoder.h  Force.c  Force.h  GPS.c  GPS.h  IMU.c  IMU.h  Power.c  Power.h  Sensor.h
VRC/: driver.cpp  motor.cpp  prerequisites.c  rotation.cpp
Vision/: CMakeLists.txt  Camera.c  Camera.h  FeatureTracking.c  FeatureTracking.h  ImageProcessing.c  ImageProcessing.h  ObjectDetection.c  ObjectDetection.h
examples/: blink.c  blink.ino
src/: gpio.c  gpio.cpp  int.c  interrupt.cpp  io.cpp  misc.cpp  motor.cpp  prerequisites.c  serial.cpp  string.cpp  time.cpp
